<package>
  <name>orb_launch</name>
  <version>0.0.0</version>
  <description>orb_launch</description>
  
  <maintainer email="pgeneva@udel.edu">Patrick Geneva</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gscam</build_depend>
  <build_depend>openni2_camera</build_depend>
  <build_depend>openni2_launch</build_depend>

  <run_depend>gscam</run_depend>
  <run_depend>openni2_camera</run_depend>
  <run_depend>openni2_launch</run_depend>

</package>
